# SOP

./: LICENSE  README.md  README1.md
python/: pyproject.toml
python/sop/base/: api.py  app.py  entity.py
python/sop/client/: api.py  app.py  entity.py  rpc.py
python/sop/server/: api.py  app.py  auth.py  db.py  entity.py
python/sop/utils/: parsing.py  strings.py
typescript/: package.json
